artifacthub/library/general/containerresourceratios/1.0.1/samples/container-must-meet-ratio/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa-disallowed
  labels:
    owner: me.agilebank.demo
spec:
  containers:
    - name: opa
      image: openpolicyagent/opa:0.9.2
      securityContext:
        allowPrivilegeEscalation: false
      args:
        - "run"
        - "--server"
        - "--addr=localhost:8080"
      resources:
        limits:
          cpu: "200m"
          memory: "200Mi"
        requests:
          cpu: "100m"
          memory: "100Mi"
